--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,14 @@
 <div class="navbar">
-<p>navbar</p>
+    <div class="topNav">
+        <img src="assets/logo.png" style="height:5vh ;width: 3vw;margin-right: 1rem;" alt="hello" />
+        <span class="logo_name">HAPPY RESIDENCE</span>
+    </div>
+    <div class="backgroundColor">
+        <span class="nav-item" routerLink="/homepage">Home</span>
+        <span class="nav-item" routerLink="services">Services</span>
+        <span class="nav-item" routerLink="maps">Maps</span>
+        <span class="nav-item" routerLink="services">Local Analysis</span>
+        <span class="nav-item" routerLink="services">Infrastructure and 3D Module</span>
+        <span class="nav-item" routerLink="services">Work with us</span>
+    </div>
 </div>
