--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,10 +5,13 @@
     </div>
     <div class="backgroundColor">
         <span class="nav-item" routerLink="/homepage">Home</span>
-        <span class="nav-item" routerLink="services">Services</span>
-        <span class="nav-item" routerLink="maps">Maps</span>
-        <span class="nav-item" routerLink="services">Local Analysis</span>
-        <span class="nav-item" routerLink="services">Infrastructure and 3D Module</span>
-        <span class="nav-item" routerLink="services">Work with us</span>
+        <span class="nav-item" routerLink="/homepage/services">Services</span>
+        <span class="nav-item" routerLink="/homepage/maps">Maps</span>
+        <span class="nav-item" routerLink="/homepage/localanalysis">Local Analysis</span>
+        <span class="nav-item" routerLink="/homepage/infrastructure">Infrastructure and 3D Module</span>
+        <span class="nav-item" routerLink="/homepage/donations">Donations</span>
+        <span class="nav-item" routerLink="/homepage/workwithus">Work with us</span>
+        <span class="nav-item" routerLink="/homepage/feedback">Feedback</span>
+        <span class="nav-item" routerLink="/homepage/contactus">Contact Us</span>
     </div>
 </div>
