basic navbar and footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,17 +1,25 @@
-<div class="footer backgroundColor">
-    <div class="row">
-        <div class="col">Services</div>
-        <div class="col">Maps</div>
-        <div class="col">Local Analysis</div>
-        <div class="col">Infrastructure and 3D Modules</div>
-        <div class="col">
-            Donations<br>
-            Work With Us<br>
-            Feedback<br>
-            Contact Us<br>
+
+<div class="footer"><br/>
+    <div style="margin: 2rem;">
+        <div class="row">
+            <div class="col">Services</div>
+            <div class="col">Maps</div>
+            <div class="col">Local Analysis</div>
+            <div class="col">Infrastructure and 3D Modules</div>
+            <div class="col">
+                Donations<br>
+                Work With Us<br>
+                Feedback<br>
+                Contact Us<br>
+            </div>
+        </div>
+        <div style="display: flex;justify-content:center;align-items:center">
+            <h5>Copyright © 2022 Slum Control Autority of India All Rights Reserved</h5>
         </div>
     </div>
-    <div style="display: flex;justify-content:center;align-items:center">
-        <h5>Copyright © 2022 Slum Control Autority of India All Rights Reserved</h5>
-    </div>
 </div>
+<!-- 
+<div class="footer backgroundColor">
+   
+</div> -->
+
