--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,6 +1,13 @@
-.footer{
 
-}
+.footer {
+    background: url('../../assets/foo.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 50vh;
+} 
+
 
 .backgroundColor {
     background: rgb(1, 9, 71);
@@ -9,4 +16,5 @@
     padding: 0.7rem;
     padding-left: 7vw;
     font-family: 'Poppins', sans-serif;
+
 }
