--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div>
+<div style="height: 100vh;">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
