--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,17 +1,25 @@
 <div class="navbar">
     <div class="topNav">
-        <img src="assets/logo.png" style="height:5vh ;width: 3vw;margin-right: 1rem;" alt="hello" />
-        <span class="logo_name">HAPPY RESIDENCE</span>
+        <img src="assets/logo.png" style="height:10vh ;width: 5vw;margin-right: 1rem;" alt="hello" />
+        <span>
+            <span class="logo_name">HAPPY RESIDENCE 4 U</span><br />
+            <strong style="font-size: 0.9rem;color:rgba(23, 164, 209, 1);font-family: poppins;">We build your visions , with perfections .</strong>
+        </span>
     </div>
     <div class="backgroundColor">
         <span class="nav-item" routerLink="/homepage">Home</span>
-        <span class="nav-item" routerLink="/homepage/services">Services</span>
-        <span class="nav-item" routerLink="/homepage/maps">Maps</span>
-        <span class="nav-item" routerLink="/homepage/localanalysis">Local Analysis</span>
-        <span class="nav-item" routerLink="/homepage/infrastructure">Infrastructure and 3D Module</span>
-        <span class="nav-item" routerLink="/homepage/donations">Donations</span>
-        <span class="nav-item" routerLink="/homepage/workwithus">Work with us</span>
-        <span class="nav-item" routerLink="/homepage/feedback">Feedback</span>
+
+        <span class="nav-item" routerLink="services">Services</span>
+        <span class="nav-item" routerLink="maps">Maps</span>
+        <span class="nav-item" routerLink="feedback">Feedback</span>
+        <span class="nav-item" routerLink="donations">Donate</span>
+        <span class="nav-item" routerLink="maps">Team</span>
+        <span class="nav-item" routerLink="localanalysis">Local Analysis</span>
+        <span class="nav-item" routerLink="infrastructure">Infrastructure and 3D Module</span>
+        <span class="nav-item" routerLink="workwithus">Work with us</span>
         <span class="nav-item" routerLink="/homepage/contactus">Contact Us</span>
+
+        
+
     </div>
 </div>
