--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,17 +1,17 @@
 <div class="footer backgroundColor">
     <div class="row">
-        <div class="col">Services</div>
-        <div class="col">Maps</div>
-        <div class="col">Local Analysis</div>
-        <div class="col">Infrastructure and 3D Modules</div>
+        <div class="col" style="cursor:pointer" routerLink="/homepage/services">Services</div>
+        <div class="col" style="cursor:pointer" routerLink="/homepage/maps">Maps</div>
+        <div class="col" style="cursor:pointer" routerLink="/homepage/localanalysis">Local Analysis</div>
+        <div class="col" style="cursor:pointer" routerLink="/homepage/infrastructure">Infrastructure and 3D Modules</div>
         <div class="col">
-            Donations<br>
-            Work With Us<br>
-            Feedback<br>
-            Contact Us<br>
+            <span style="cursor:pointer" routerLink="/homepage/donations">Donations</span><br>
+            <span style="cursor:pointer" routerLink="/homepage/workwithus">Work With Us</span><br>
+            <span style="cursor:pointer" routerLink="/homepage/feedback">Feedback</span><br>
+            <span style="cursor:pointer" routerLink="/homepage/contactus">Contact Us</span><br>
         </div>
-    </div>
+    </div><br>
     <div style="display: flex;justify-content:center;align-items:center">
-        <h5>Copyright © 2022 Slum Control Autority of India All Rights Reserved</h5>
+        <h6>Copyright © 2022 Slum Control Autority of India All Rights Reserved</h6>
     </div>
 </div>
