--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<div class="navbar">
+<div class="header">
     <div class="topNav">
         <img src="assets/logo.png" style="height:5vh ;width: 3vw;margin-right: 1rem;" alt="hello" />
         <span class="logo_name">HAPPY RESIDENCE</span>
-    </div>
+    </div><br><br>
     <div class="backgroundColor">
         <span class="nav-item" routerLink="/homepage">Home</span>
         <span class="nav-item" routerLink="/homepage/services">Services</span>
