--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,15 +6,15 @@
             <div class="col" style="cursor:pointer" routerLink="/homepage/localanalysis">Local Analysis</div>
             <div class="col-3" style="cursor:pointer" routerLink="/homepage/infrastructure">Infrastructure and 3D Modules</div>
             <div class="col">
-            <span style="cursor:pointer" routerLink="/homepage/donations">Donations</span><br>
-            <span style="cursor:pointer" routerLink="/homepage/workwithus">Work With Us</span><br>
-            <span style="cursor:pointer" routerLink="/homepage/feedback">Feedback</span><br>
-            <span style="cursor:pointer" routerLink="/homepage/contactus">Contact Us</span><br>
-            <i class='bx bxl-linkedin-square bx-tada bx-rotate-90'   ></i>
-            <i class='bx bxl-facebook-circle bx-tada bx-rotate-90' ></i>
-            <i class='bx bxl-twitter bx-tada bx-rotate-90'></i> 
+            <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/donations">Donations</div><br>
+            <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/workwithus">Work With Us</div><br>
+            <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/feedback">Feedback</div><br>
+            <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/contactus">Contact Us</div><br>
+            <i class='bx bxl-linkedin-square bx-tada bx-rotate-90' style="font-size:2rem"   ></i>
+            <i class='bx bxl-facebook-circle bx-tada bx-rotate-90' style="font-size:2rem" ></i>
+            <i class='bx bxl-twitter bx-tada bx-rotate-90' style="font-size:2rem"></i>
             </div>
-        </div><br><br>
+        </div><br>
         <div style="display: flex;justify-content:center;align-items:center">
             <h6>Copyright © 2022 Slum Control Autority of India All Rights Reserved</h6>
         </div>
