--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -5,7 +5,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 50vh;
+    height: 45vh;
+    color: white;
 } 
 
 
@@ -16,5 +17,4 @@
     padding: 0.7rem;
     padding-left: 7vw;
     font-family: 'Poppins', sans-serif;
-
 }
