--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,1 +1,17 @@
-<p>homepage works!</p>
+<br><br><h2>About Us</h2>
+<p>Happyresidence4u is web app where you can access all type of info about the slum or  an particular area in detail. In this application you will be able to locate the slums anywhere both by size and by population density in that blighted area. One can also offer and search for employment with our application. One can monitor the progress of slum development activities on daily basis.</p><br>
+
+
+<h2>Our Services</h2>
+<ul>
+    <li>Identification of slums</li>
+    <li>Area analysis of particular region </li>
+    <li>Categorized maps</li>
+    <li>Sample 3D and 2D model for infrastructure and layouts</li>
+    <li>Employment opportunities</li>
+    <li>Donations</li>
+</ul><br>
+<h2>Infrastructure And 3D Modules</h2>
+<p>Happyresidence4u is web app where you can access all type of info about the slum or  an particular area in detail. In this application you will be able to locate the slums anywhere both by size and by population density in that blighted area. One can also offer and search for employment with our application. One can monitor the progress of slum development activities on daily basis.</p><br>
+<h2>Work With Us</h2>
+<p>Happyresidence4u is web app where you can access all type of info about the slum or  an particular area in detail. In this application you will be able to locate the slums anywhere both by size and by population density in that blighted area. One can also offer and search for employment with our application. One can monitor the progress of slum development activities on daily basis.</p><br>
