--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="header">
-    <div class="topNav">
+<div class="navbar" >
+    <div class="topNav" style="background-color: white;width:100%;">
         <img src="assets/logo.png" style="height:10vh ;width: 5vw;margin-right: 1rem;" alt="hello" />
         <span>
             <span class="logo_name">HAPPY RESIDENCE 4 U</span><br />
@@ -8,7 +8,6 @@
     </div>
     <div class="backgroundColor">
         <span class="nav-item" routerLink="/homepage">Home</span>
-
         <span class="nav-item" routerLink="services">Services</span>
         <span class="nav-item" routerLink="maps">Maps</span>
         <span class="nav-item" routerLink="feedback">Feedback</span>
@@ -18,8 +17,5 @@
         <span class="nav-item" routerLink="infrastructure">Infrastructure and 3D Module</span>
         <span class="nav-item" routerLink="workwithus">Work with us</span>
         <span class="nav-item" routerLink="/homepage/contactus">Contact Us</span>
-
-        
-
     </div>
 </div>
