--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -7,6 +7,7 @@
     padding: 0.7rem;
     padding-left: 7.5vw;
     font-family: 'Poppins', sans-serif;
+    width: 100%;
 }
 
 .nav-item {
@@ -35,7 +36,7 @@
 }
 .navbar{ 
         position: sticky;
-        top: 0px;
+        top: -0.5rem;
 }
 
 
