--- a/src/app/workwithus/workwithus.component.html
+++ b/src/app/workwithus/workwithus.component.html
@@ -1,1 +1,75 @@
-<p>workwithus works!</p>
+
+<div style="display: flex;justify-content:center;align-items:center">
+    <form [formGroup]="workapply" (ngSubmit)="apply()">
+        <div class="card" style="padding: 1rem;background-color: whitesmoke;">
+            <h4>Work With Us</h4>
+            <br>
+            <div class="row">
+                <div class="col">
+                    <label>First Name</label><br>
+                    <input style="border: none;" placeholder="Enter Your First Name" formControlName="firstname">
+                </div>
+                <div class="col">
+                    <label>Middle Name</label><br>
+                    <input style="border: none;" placeholder="Enter Your Middle Name" formControlName="middlename">
+                </div>
+                <div class="col">
+                    <label>Last Name</label><br>
+                    <input style="border: none;" placeholder="Enter Your Last Name" formControlName="lastname">
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col">
+                    <label>Email</label><br>
+                    <input style="border: none;" placeholder="Enter Your Email" type="email" formControlName="email">
+                </div>
+                <div class="col">
+                    <label>Mobile Number</label><br>
+                    <input style="border: none;" placeholder="Enter Your Mobile Numnber" type="number" formControlName="mobileno">
+                </div>
+                <div class="col">
+                    <label>Alternative Mobile Number</label><br>
+                    <input style="border: none;" placeholder="Enter Your Alternative Mobile Number" type="number" formControlName="altmobileno">
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col">
+                    <label>Applying Post</label><br>
+                    <select class="form-select shadow-none" style="padding: 12px 15px;margin: 8px 0;border: none;" formControlName="jobpost">
+                    <option value="" disabled selected>select a post</option>
+                    <option value="contractor">Contractor</option>
+                    <option value="construction engineer">Construction Engineer</option>
+                    <option value="supervisor">Supervisor</option>
+                    <option value="daily labour">Daily Labour</option>
+                    <option value="any post">Any Post</option>
+                </select>
+                </div>
+                <div class="col">
+                    <label>Previous Experience</label><br>
+                    <select class="form-select shadow-none" style="padding: 12px 15px;margin: 8px 0;border: none;" formControlName="prevexperience">
+                        <option value="" disabled selected>Experience Status</option>
+                        <option value="yes">Yes</option>
+                        <option value="no">No</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <label>Previous Work Place</label><br>
+                    <input style="border: none;" placeholder="Enter Name of Your Previous Work Place" formControlName="prevworkplace">
+                </div>
+            </div>
+            <div class="row">
+                <div >
+                    <label>Address</label><br>
+                    <input  placeholder="Enter Your Address" formControlName="address" style="width: 100%;">
+                </div>
+            </div><br>
+            <div class="row" >
+                <div style="display: flex;justify-content: center;align-items: center;" >
+                    <button class="btn btn" type="submit" style="background-color: rgba(1, 9, 71, 1);color: white;padding: 0.6rem 2rem; font-weight: bold;">Apply</button>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
