--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,6 +5,9 @@
             <span class="logo_name">HAPPY RESIDENCE 4 U</span><br />
             <strong style="font-size: 0.9rem;color:rgba(23, 164, 209, 1);font-family: poppins;">We build your visions , with perfections .</strong>
         </span>
+        <span style="margin-left: 50%;">
+            <img src="../../assets/sihlogo.svg">
+        </span>
     </div>
     <div class="backgroundColor">
         <span class="nav-item" routerLink="/homepage">Home</span>
