--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,5 +20,6 @@
         <span class="nav-item" routerLink="infrastructure">Infrastructure and 3D Module</span>
         <span class="nav-item" routerLink="workwithus">Work with us</span>
         <span class="nav-item" routerLink="/homepage/contactus">Contact Us</span>
+        <button class="btn btn" style="background: linear-gradient(118deg, rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);margin-left: 15%;color: white;font-weight: bold;" routerLink="/login">LOGIN</button>
     </div>
 </div>
