--- a/src/app/workwithus/workwithus.component.html
+++ b/src/app/workwithus/workwithus.component.html
@@ -1,5 +1,5 @@
 
-<div style="display: flex;justify-content:center;align-items:center">
+<div style="display: flex;justify-content:center;align-items:center;">
     <form [formGroup]="workapply" (ngSubmit)="apply()">
         <div class="card" style="padding: 1rem;background-color: whitesmoke;">
             <h4>Work With Us</h4>
