--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -7,12 +7,11 @@
     width: 100%;
     height: 45vh;
     color: white;
+
 } 
 
 
-.backgroundColor {
-    background: rgb(1, 9, 71);
-    background: linear-gradient(128deg, rgba(1, 9, 71, 1) 19%, rgba(23, 164, 209, 1) 100%);
+.footerContent {
     color: white;
     padding: 0.7rem;
     padding-left: 7vw;
