--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,12 @@
-<div class="footer"><br/>
-    <div style="margin: 2rem;margin-top: 1rem;">
-        <div class="row" style="margin-left: 2rem;font-weight: bold;">
-            <div class="col" style="cursor:pointer" routerLink="/homepage/services">Services</div>
-            <div class="col" style="cursor:pointer" routerLink="/homepage/maps">Maps</div>
-            <div class="col" style="cursor:pointer" routerLink="/homepage/localanalysis">Local Analysis</div>
-            <div class="col-3" style="cursor:pointer" routerLink="/homepage/infrastructure">Infrastructure and 3D Modules</div>
+
+
+<div class="footer"><br />
+    <div class="footerContent">
+        <div class="row" style="margin: 0;padding:0">
+            <div class="col">Services</div>
+            <div class="col">Maps</div>
+            <div class="col">Local Analysis</div>
+            <div class="col">Infrastructure and 3D Modules</div>
             <div class="col">
             <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/donations">Donations</div><br>
             <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/workwithus">Work With Us</div><br>
@@ -15,8 +17,9 @@
             <i class='bx bxl-twitter bx-tada bx-rotate-90' style="font-size:2rem"></i>
             </div>
         </div><br>
-        <div style="display: flex;justify-content:center;align-items:center">
-            <h6>Copyright © 2022 Slum Control Autority of India All Rights Reserved</h6>
+
+        <div style="text-align: center;">
+            <span>Copyright © 2022 Slum Control Autority of India All Rights Reserved</span>
         </div>
     </div>
 </div>
@@ -25,4 +28,3 @@
 <div class="footer backgroundColor">
    
 </div> -->
-
