--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,8 @@
         <img src="assets/logo.png" style="height:10vh ;width: 5vw;margin-right: 1rem;" alt="hello" />
         <span>
             <span class="logo_name">HAPPY RESIDENCE 4 U</span><br />
-            <strong style="font-size: 0.9rem;color:rgba(23, 164, 209, 1);font-family: poppins;">We build your visions , with perfections .</strong>
+            <strong style="font-size: 0.9rem;color:rgba(23, 164, 209, 1);font-family: poppins;">We build your visions ,
+                with perfections .</strong>
         </span>
         <span style="margin-left: 50%;">
             <img src="../../assets/sihlogo.svg">
@@ -21,5 +22,18 @@
         <span class="nav-item" routerLink="workwithus">Work with us</span>
         <span class="nav-item" routerLink="/homepage/contactus">Contact Us</span>
         <button class="btn btn" style="background: linear-gradient(118deg, rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);margin-left: 15%;color: white;font-weight: bold;" routerLink="/login">LOGIN</button>
+
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown button
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+        </div>
+
     </div>
 </div>
