--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar" >
+<div class="navbar">
     <div class="topNav" style="background-color: white;width:100%;">
         <img src="assets/logo.png" style="height:10vh ;width: 5vw;margin-right: 1rem;" alt="hello" />
         <span>
@@ -11,17 +11,19 @@
         </span>
     </div>
     <div class="backgroundColor">
-        <span class="nav-item" routerLink="/homepage">Home</span>
-        <span class="nav-item" routerLink="services">Services</span>
-        <span class="nav-item" routerLink="maps">Maps</span>
-        <span class="nav-item" routerLink="feedback">Feedback</span>
-        <span class="nav-item" routerLink="donations">Donate</span>
-        <span class="nav-item" routerLink="maps">Team</span>
-        <span class="nav-item" routerLink="localanalysis">Local Analysis</span>
-        <span class="nav-item" routerLink="infrastructure">Infrastructure and 3D Module</span>
-        <span class="nav-item" routerLink="workwithus">Work with us</span>
-        <span class="nav-item" routerLink="/homepage/contactus">Contact Us</span>
-        <button class="btn btn" style="background: linear-gradient(118deg, rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);margin-left: 15%;color: white;font-weight: bold;" routerLink="/login">LOGIN</button>
+        <span class="nav-item" routerLinkActive="active" routerLink="homepage">Home</span>
+        <span class="nav-item" routerLinkActive="active" routerLink="services">Services</span>
+        <span class="nav-item" routerLinkActive="active" routerLink="maps">Maps</span>
+        <span class="nav-item" routerLinkActive="active" routerLink="feedback">Feedback</span>
+        <span class="nav-item" routerLinkActive="active" routerLink="donations">Donate</span>
+        <span class="nav-item" routerLinkActive="active" routerLink="maps">Team</span>
+        <span class="nav-item" routerLinkActive="active" routerLink="localanalysis">Local Analysis</span>
+        <span class="nav-item" routerLinkActive="active" routerLink="infrastructure">Infrastructure and 3D Module</span>
+        <span class="nav-item" routerLinkActive="active" routerLink="workwithus">Work with us</span>
+        <span class="nav-item" routerLinkActive="active" routerLink="/homepage/contactus">Contact Us</span>
+        <button class="btn btn"
+            style="background: linear-gradient(118deg, rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);margin-left: 15%;color: white;font-weight: bold;"
+            routerLink="/login">LOGIN</button>
 
         <!-- <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
