--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,30 +1,55 @@
+<img class="shadow" [src]='imageSource' style="width:100% ;height:50vh" />
 
-<img  class="shadow"   [src]='imageSource' style="width:100vw ;height:60vh"/>
+<div>
 
-<br><br>
-<h2>About Us</h2>
-<p>Happyresidence4u is web app where you can access all type of info about the slum or an particular area in detail. In
-    this application you will be able to locate the slums anywhere both by size and by population density in that
-    blighted area. One can also offer and search for employment with our application. One can monitor the progress of
-    slum development activities on daily basis.</p><br>
+    <div class="row" style="background-color: #060B4B;margin: 0;padding: 3rem;color: white;">
+        <div class="col"><br />
+            <p style="line-height: 35px;"><strong style="font-size:1.7rem;color: white;font-family: 'Poppins';">HAPPY
+                    RESIDENCE 4 U
+                </strong> is web app where you can access all type of info about the slum or an particular area in
+                detail.
+                In
+                this application you will be able to locate the slums anywhere both by size and by population density in
+                that
+                blighted area. One can also offer and search for employment with our application. One can monitor the
+                progress
+                of
+                slum development activities on daily basis.</p><br>
+        </div>
+        <div class="col"><br />
+            <img style="width: 50vw;" src="assets/about.png" />
+        </div>
+    </div>
+
+    <br />
+    <div class="row " style="margin: 0;padding: 3rem;padding-top: 2rem;padding-bottom: 0rem;margin-left: 5vw">
+        <div class="col">
+            <img src="assets/services.gif" />
+
+        </div>
+        <div class="col">
+            <h1 style="color:rgba(1, 9, 71, 1)">Our Services</h1><br />
+            <ul>
+                <li>Identification of slums</li>
+                <li>Area analysis of particular region </li>
+                <li>Categorized maps</li>
+                <li>Sample 3D and 2D model for infrastructure and layouts</li>
+                <li>Employment opportunities</li>
+                <li>Donations</li>
+            </ul>
+        </div>
 
 
-<h2>Our Services</h2>
-<ul>
-    <li>Identification of slums</li>
-    <li>Area analysis of particular region </li>
-    <li>Categorized maps</li>
-    <li>Sample 3D and 2D model for infrastructure and layouts</li>
-    <li>Employment opportunities</li>
-    <li>Donations</li>
-</ul><br>
-<h2>Infrastructure And 3D Modules</h2>
-<p>Happyresidence4u is web app where you can access all type of info about the slum or an particular area in detail. In
-    this application you will be able to locate the slums anywhere both by size and by population density in that
-    blighted area. One can also offer and search for employment with our application. One can monitor the progress of
-    slum development activities on daily basis.</p><br>
-<h2>Work With Us</h2>
-<p>Happyresidence4u is web app where you can access all type of info about the slum or an particular area in detail. In
-    this application you will be able to locate the slums anywhere both by size and by population density in that
-    blighted area. One can also offer and search for employment with our application. One can monitor the progress of
-    slum development activities on daily basis.</p><br>
+
+    </div>
+
+    <div class="row halfback" style="margin: 0;padding: 3rem;padding-left: 5vw">
+        <div class="col-6 text-center"><br /><br />
+            <h1 style="color:white">Infrastructure<br /> and <br />3D Model</h1><br />
+        </div>
+        <div class="col" style="margin-left:3vw;"><br />
+            <img style="width: 30vw;height:15vw;border-radius: 12px;" src="assets/infrastructure.png" />
+        </div>
+    </div>
+
+</div>
