--- a/src/app/workwithus/workwithus.component.css
+++ b/src/app/workwithus/workwithus.component.css
@@ -1,10 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
 
-input {
-	border: none;
-	padding: 12px 15px;
-	margin: 8px 0;
-	outline: none;
-	/* border-bottom: 1px solid darkgrey; */
-	background-color: white;
-    border-radius: 5px;
+div {
+	font-family: 'poppins';
+}
+
+label{
+	color:rgba(1, 9, 71, 1);
+	font-size: 0.9rem;
+}
+input , select {
+	font-size: 0.8rem !important;
+    border-radius: 3px !important;
+}
+
+h1{
+	font-family: 'Montserrat';
+	font-size: 5rem;
 }
